--- a/frontend/src/app/componentes/dialogs/mantenimiento-dialog/mantenimiento-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/mantenimiento-dialog/mantenimiento-dialog.component.html
@@ -52,6 +52,7 @@
                   </tr>
                 </tbody>
             </table>
+            <p>Total mantenimientos: <b class="h4">{{ totalMtto | currency: 'MXN' }}</b></p>
         </div>
     </div>
 </div>
