--- a/frontend/src/app/componentes/dialogs/remision-dialog/remision-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/remision-dialog/remision-dialog.component.html
@@ -1,21 +1,10 @@
 <div class="container-fluid">
     <h4>{{ data.tituloVentana }}</h4>
     
+    <div id="error_remision" class="alert alert-dismissible alert-warning" style="display: none;" role="alert"></div>
     <form class="row g-3">
         <div class="col-6">
             <input [(ngModel)]="remisionActiva._id" class="form-control" type="hidden" name="_id" id="identificador" />
-            <!-- <label for="txtID" class="form-label">No. Remisión</label>
-            <input [(ngModel)]="remisionActiva.id" class="form-control" type="text" name="id" id="txtID" /> -->
-            
-            <!-- <label class="form-label">Tipo</label><br>
-            <div class="form-check form-check-inline">
-                <input [(ngModel)]="tipoContrato" name="tipoContrato" class="form-check-input" type="radio" id="radF" [value]="true">
-                <label class="form-check-label" for="radF">Facturdo</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input [(ngModel)]="tipoContrato" name="tipoContrato" class="form-check-input" type="radio" id="radNF" [value]="false">
-                <label class="form-check-label" for="radNF">No facturado</label>
-            </div> -->
             <ng-container *ngIf="tipoContrato == true">
                 <label for="txtFactura" class="form-label">No. Factura</label>
                 <input [(ngModel)]="remisionActiva.factura" class="form-control" type="text" name="factura" id="txtFactura"/>
