--- a/frontend/src/app/componentes/header/header.component.html
+++ b/frontend/src/app/componentes/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" routerLink="/">Inmobiliaria JGL</a>
+        <a class="navbar-brand" routerLink="/escritorio">Inmobiliaria JGL</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,9 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/contratos" routerLinkActive="active"><fa-icon [icon]="faFileContract"></fa-icon> Contratos</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" routerLink="/facturas" routerLinkActive="active"><fa-icon [icon]="faFileInvoiceDollar"></fa-icon> Facturas</a>
-                    </li>
+                    </li> -->
                 </ng-container>
             </ul>
 
