--- a/frontend/src/app/componentes/header/header.component.html
+++ b/frontend/src/app/componentes/header/header.component.html
@@ -19,9 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/contratos" routerLinkActive="active"><fa-icon [icon]="faFileContract"></fa-icon> Contratos</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" routerLink="/facturas" routerLinkActive="active"><fa-icon [icon]="faFileInvoiceDollar"></fa-icon> Facturas</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/finanzas" routerLinkActive="active"><fa-icon [icon]="faPiggyBank"></fa-icon> Finanzas</a>
+                    </li>
                 </ng-container>
             </ul>
 
