--- a/frontend/src/app/componentes/inquilinos/inquilinos.component.html
+++ b/frontend/src/app/componentes/inquilinos/inquilinos.component.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-10">
         <h1>Inquilinos</h1>
-        <div class="btn-group  mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
+        <!-- <div class="btn-group  mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
             <input (click)="GetTodos()" type="radio" class="btn-check" name="radEstadoProp" id="radTodos" autocomplete="off" checked>
             <label class="btn btn-outline-primary" for="radTodos">Todos</label>
-            <!-- <input (click)="GetRentadas()" type="radio" class="btn-check" name="radEstadoProp" id="radRentada" autocomplete="off">
-            <label class="btn btn-outline-primary" for="radRentada">Rentadas</label> -->
-        </div>
+            <input (click)="GetRentadas()" type="radio" class="btn-check" name="radEstadoProp" id="radRentada" autocomplete="off">
+            <label class="btn btn-outline-primary" for="radRentada">Rentadas</label>
+        </div> -->
     </div>
     <div class="col-2 d-flex d-flex justify-content-end">
         <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="NuevoInquilino()" class="btn btn-primary align-self-start" role="button">Agregar Inquilino</button>
