--- a/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
+++ b/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
@@ -3,7 +3,7 @@
         <h1>Estado de cuenta</h1>
     </div>
     <div class="col-5 d-flex d-flex justify-content-end">
-        <!-- <button  class="btn btn-success align-self-start" role="button">Nuevo ingreso</button> -->
+        <button (click)="SetSaldoInicial()" *ngIf="transacciones.length <= 0" class="btn btn-success align-self-start" role="button">Saldo inicial</button>
         <button (click)="NuevoEgreso()" class="btn btn-warning align-self-start mx-2" role="button">Registrar egreso</button>
         <button class="btn btn-secondary align-self-start"><fa-icon [icon]="faPrint"></fa-icon></button>
     </div>
@@ -32,3 +32,10 @@
         </table>
     </div>
 </div>
+
+<!-- <script src="https://cdn.datatables.net/buttons/2.0.0/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.0.0/js/buttons.html5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.0.0/js/buttons.print.min.js"></script> -->
