Cambio a datatables de angular y se instaló la extensión para exportar a distintos formatos la tabla

--- a/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
+++ b/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="col-5 d-flex d-flex justify-content-end">
         <button (click)="SetSaldoInicial()" *ngIf="transacciones.length <= 0" class="btn btn-success align-self-start" role="button">Saldo inicial</button>
-        <button (click)="NuevoEgreso()" class="btn btn-warning align-self-start mx-2" role="button">Registrar egreso</button>
-        <button class="btn btn-secondary align-self-start"><fa-icon [icon]="faPrint"></fa-icon></button>
+        <button (click)="NuevoEgreso()" class="btn btn-warning align-self-start ms-2" role="button">Registrar egreso</button>
+        <!-- <button class="btn btn-secondary align-self-start"><fa-icon [icon]="faPrint"></fa-icon></button> -->
     </div>
 </div>
 <div class="row">
