--- a/frontend/src/app/componentes/estado-cuenta/estado-cuenta.component.html
+++ b/frontend/src/app/componentes/estado-cuenta/estado-cuenta.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="col-5 d-flex d-flex justify-content-end">
         <button (click)="NuevaRemision()" class="btn btn-primary align-self-start" role="button">Crear remisión</button>
-        <button (click)="NuevoPago()" class="btn btn-success align-self-start mx-2" role="button">Hacer pago</button>
-        <button class="btn btn-secondary align-self-start"><fa-icon [icon]="faPrint"></fa-icon></button>
+        <button (click)="NuevoPago()" class="btn btn-success align-self-start ms-2" role="button">Hacer pago</button>
+        <!-- <button class="btn btn-secondary align-self-start"><fa-icon [icon]="faPrint"></fa-icon></button> -->
     </div>
 </div>
 <div class="row">
