--- a/frontend/src/app/componentes/remisiones/remisiones.component.html
+++ b/frontend/src/app/componentes/remisiones/remisiones.component.html
@@ -12,7 +12,7 @@
 </div>
 <div class="row">
     <div class="col border py-4" style="background-color: white;">
-        <table id="dtRemisiones" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-border row-border hover">
+        <table id="dtRemisiones" datatable  class="table table-striped table-border row-border hover">
             <thead class="thead-light">
               <tr>
                 <th scope="col">N°</th>
