Se agregö la columna de sALDO PENDIENTE en el estado de cuenta por contrato para más rápida visualización. También ahora se calcula el saldo pendiente de cada estado de cuenta en tiempo real al cargar la página en vez de leer un campo guardado en la db. Se añadió el método de pago en los mantenimientos

--- a/frontend/src/app/componentes/dialogs/egreso-dialog/egreso-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/egreso-dialog/egreso-dialog.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-12">
             <label for="txtConcepto" class="form-label">Concepto</label>
-            <textarea class="form-control" [(ngModel)]="egresoActivo.metodoPago" name="metodoPago" id="txtConcepto" cols="30" rows="3"></textarea>
+            <textarea class="form-control" [(ngModel)]="concepto" name="concepto" id="txtConcepto" cols="30" rows="3"></textarea>
         </div>
         
         <div class="col-12 d-flex justify-content-end">
