--- a/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
+++ b/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-7">
-        <h1>Estado de cuenta</h1>
+        <h1>Estado de cuenta bancario</h1>
     </div>
     <div class="col-5 d-flex d-flex justify-content-end">
         <button (click)="SetSaldoInicial()" *ngIf="transacciones.length <= 0" class="btn btn-success align-self-start" role="button">Saldo inicial</button>
