--- a/frontend/src/app/componentes/contratos/contratos.component.html
+++ b/frontend/src/app/componentes/contratos/contratos.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-10">
+    <div class="col-8">
         <h1>Contratos</h1>
         <div class="btn-group  mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
             <input (click)="GetTodos()" type="radio" class="btn-check radEstadoProp" name="radEstadoProp" id="radTodos" autocomplete="off" checked>
@@ -10,9 +10,10 @@
             <label class="btn btn-outline-primary" for="radArchivados">Archivados</label>
         </div>
     </div>
-    <div class="col-2">
+    <div class="col-4">
       <div class="d-grid d-flex justify-content-end">
         <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" class="btn btn-primary align-self-start" (click)="NuevoContrato()">Crear contrato</button>
+        <button (click)="GenerarPDF()" type="button" class="btn btn-primary ms-2">PDF</button>
       </div>
     </div>
 </div>
@@ -26,6 +27,7 @@
                 <th scope="col">Inquilino</th>
                 <th scope="col">Fecha Inicio</th>
                 <th scope="col">Fecha Cierre</th>
+                <th scope="col">Saldo pendiente</th>
                 <th scope="col">Acciones</th>
               </tr>
             </thead>
@@ -36,6 +38,7 @@
                 <td>{{ contr.inquilino.contacto.nombre + ' ' + contr.inquilino.contacto.apellidos }}</td>
                 <td>{{ contr.fechaInicio | date:'dd/M/Y' }}</td>
                 <td>{{ contr.fechaCierre | date:'dd/M/y' }}</td>
+                <td>{{ contr.saldo | currency: 'MXN' }}</td>
                 <td>
                     <button (click)="VerContrato(contr._id)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
                     <button routerLink="/estado_cuenta/{{ contr.noContrato }}/{{ contr.tipo }}/{{ contr.costoPeriodo }}" class="btn btn-success btn-sm mx-2"><fa-icon [icon]="faFileInvoiceDollar"></fa-icon></button>
