--- a/frontend/src/app/componentes/remisiones/remisiones.component.html
+++ b/frontend/src/app/componentes/remisiones/remisiones.component.html
@@ -1,13 +1,10 @@
 <div class="row">
     <div class="col-10">
         <h1>Remisiones del contrato {{ noContrato }}</h1>
-        <!-- <div class="btn-group mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
-            <input (click)="GetTodas()" type="radio" class="btn-check" name="radEstadoRem" id="radTodas" autocomplete="off" checked>
-            <label class="btn btn-outline-primary" for="radTodas">Todas</label>
-        </div> -->
     </div>
     <div class="col-2 d-flex d-flex justify-content-end">
         <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="NuevaRemision()" class="btn btn-primary align-self-start" role="button">Crear remisión</button>
+        <button (click)="GenerarPDF()" type="button" class="btn btn-primary">PDF</button>
     </div>
 </div>
 <div class="row">
