--- a/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
+++ b/frontend/src/app/componentes/edo-cuenta-empresa/edo-cuenta-empresa.component.html
@@ -1,11 +1,19 @@
 <div class="row">
-    <div class="col-7">
+    <div class="col-4">
         <h1>Estado de cuenta bancario</h1>
     </div>
-    <div class="col-5 d-flex d-flex justify-content-end">
-        <button (click)="SetSaldoInicial()" *ngIf="transacciones.length <= 0" class="btn btn-success align-self-start" role="button">Saldo inicial</button>
-        <button (click)="NuevoEgreso()" class="btn btn-warning align-self-start ms-2" role="button">Registrar egreso</button>
-        <!-- <button class="btn btn-secondary align-self-start"><fa-icon [icon]="faPrint"></fa-icon></button> -->
+    <div class="col-8 d-flex d-flex justify-content-end align-items-end">
+        <div class="form-group mb-3">
+          <label for="date_finicio">Fecha inicial</label>
+          <input id="date_finicio" type="date" class="form-control">
+        </div>
+        <div class="form-group ms-2 mb-3">
+          <label for="date_ffin">Fecha final</label>
+          <input id="date_ffin" type="date" class="form-control">
+        </div>
+        <button (click)="ImprimirEdoCuenta(0)" class="btn btn-secondary ms-2 mb-3"><fa-icon [icon]="faPrint"></fa-icon></button>
+        <button (click)="SetSaldoInicial()" *ngIf="transacciones.length <= 0" class="btn btn-success mb-3" role="button">Saldo inicial</button>
+        <button (click)="NuevoEgreso()" class="btn btn-warning ms-2 mb-3" role="button">Registrar egreso</button>
     </div>
 </div>
 <div class="row">
