Bug en estado de cuenta corregido, no actualizaba el saldo pendiente ni hacia bien los calculos, se puso calle y numero en vez de numero de predial al hacer un contrato, en el concepto del estado de cuenta poner el nombre del cliente, se agregó cheque y depósito como opciones de pago, se añadió calle y numero en vez de ciudad y estado en la tabla de propiedades

--- a/frontend/src/app/componentes/dialogs/contrato-dialog/contrato-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/contrato-dialog/contrato-dialog.component.html
@@ -41,7 +41,7 @@
                 <ng-template #nuevoContrato>
                     <ng-container *ngFor="let prop of propiedades">
                         <ng-container *ngIf="prop.estadoRenta === 'Disponible'">
-                            <option value="{{ prop._id }}">{{ prop.predial }}</option>
+                            <option value="{{ prop._id }}">{{ prop.direccion.calle }} {{ prop.direccion.no_ext }}</option>
                         </ng-container>
                     </ng-container>
                 </ng-template>
