--- a/frontend/src/app/componentes/propiedades/propiedades.component.html
+++ b/frontend/src/app/componentes/propiedades/propiedades.component.html
@@ -21,7 +21,7 @@
               <tr>
                 <th scope="col">Predial</th>
                 <th scope="col">Estatus</th>
-                <th scope="col">Ubicación</th>
+                <th scope="col">Dirección</th>
                 <th scope="col">Acciones</th>
               </tr>
             </thead>
@@ -29,7 +29,7 @@
               <tr *ngFor="let prop of propiedades">
                 <td>{{ prop.predial }}</td>
                 <td><span class="badge" [ngClass]="{'bg-success': prop.estadoRenta == 'Disponible', 'bg-warning': prop.estadoRenta == 'Rentada'}">{{ prop.estadoRenta }}</span></td>
-                <td>{{ prop.direccion.ciudad }}, {{ prop.direccion.estado }}</td>
+                <td>{{ prop.direccion.calle }}, {{ prop.direccion.no_ext }}</td>
                 <td>
                     <button (click)="VerPropiedad(prop)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
                     <button (click)="AbrirMtto(prop)" class="btn btn-warning btn-sm mx-2"><fa-icon [icon]="faTools"></fa-icon></button>
