--- a/frontend/src/app/componentes/contratos/contratos.component.html
+++ b/frontend/src/app/componentes/contratos/contratos.component.html
@@ -35,7 +35,12 @@
               <tr *ngFor="let contr of contratos">
                 <td>{{ contr.noContrato }}</td>
                 <td>{{ contr.propiedad.direccion.calle + ' ' + contr.propiedad.direccion.no_ext + ' ' + contr.propiedad.direccion.no_int + ', ' + contr.propiedad.direccion.ciudad }}</td>
-                <td>{{ contr.inquilino.contacto.nombre + ' ' + contr.inquilino.contacto.apellidos }}</td>
+                <ng-container *ngIf="contr.inquilino.tipo == true">
+                  <td>{{ contr.inquilino.contacto.nombre + ' ' + contr.inquilino.contacto.apellidos }}</td>
+                </ng-container>
+                <ng-container *ngIf="contr.inquilino.tipo == false">
+                  <td>{{ contr.inquilino.empresa }}</td>
+                </ng-container>
                 <td>{{ contr.fechaInicio | date:'dd/M/Y' }}</td>
                 <td>{{ contr.fechaCierre | date:'dd/M/y' }}</td>
                 <td>{{ contr.saldo | currency: 'MXN' }}</td>
